# UDIAgent

./: .env.template  .gitignore  Dockerfile  README.md  notes.md  pyproject.toml  test.py
.github/workflows/: deploy.yaml
data/: benchmark.json  example_prompts.json
data/benchmark_dqvis/: tiny.jsonl
data/data_domains/: encounter_cube_domains.json  encounter_cube_schema.json  hubmap_data_schema.json
scripts/: regenerate_vis_tools.py  template_viz_generation.py  template_viz_generation_cube.py  vllm_a100.sbatch  vllm_h100.sbatch
src/: UDIGrammarSchema_spec_string.json  benchmark.py  generate_tools.py  generated_vis_tools.py  get_benchmark_sample.py  sanity_check_data.py  structured_functions.py  udi_agent.py  udi_api.py  udi_prep_data_for_finetuning.py  vis_generate.py  vis_pipeline.py
src/skills/: clarify_variable.md  free_text_explain.md  generate.md  orchestrate.md  template_visualizations.json  validate.md
src/txagent/: txagent.py
src/udiagent/: __init__.py  _compat.py  agent.py  generate_tools.py  generated_vis_tools.py  generated_vis_tools_cube.py  grammar.py  messages.py  orchestrator.py  schema.py  tools.py  vis_generate.py  vis_pipeline.py
src/udiagent/benchmark/: runner.py
src/udiagent/data/skills/: clarify_variable.md  free_text_explain.md  orchestrate.md  rebuff.md  (+2 more)
src/udiagent/server/: app.py  config.py  models.py
tests/: conftest.py  test_clarify_variable_validation.py  test_filter_management.py  test_langfuse_config.py  test_openai_key_header.py  test_request_schema_vis.py  test_template_set_switch.py  test_usage_and_budget.py
